<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single" >

    <item
        android:id="@+id/id_home"
        android:title="@string/home"
        android:icon="@drawable/baseline_home_24"
        />

    <item
        android:id="@+id/currencyconvertor_id"
        android:title="@string/currency_convertor"
        android:icon="@drawable/c"
        />

    <item
        android:id="@+id/reposts_id"
        android:title="@string/report"
        android:icon="@drawable/report"
        />

    <item
        android:id="@+id/setting_id"
        android:title="@string/settings"
        android:icon="@drawable/baseline_settings_24"
        />

    <item
        android:id="@+id/share_id"
        android:title="@string/share"
        android:icon="@drawable/baseline_share_24"
        />

    <item
        android:id="@+id/about_id"
        android:title="@string/about"
        android:icon="@drawable/info"
        />

    <item
        android:id="@+id/rateus_id"
        android:title="Rate Us"
        android:icon="@drawable/baseline_star_rate_24"
        />

    </group>
</menu>
